--- a/signup.html
+++ b/signup.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- Meta tags for search engines -->
-     <meta name="description"
-     content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
@@ -16,15 +18,16 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
     <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
         </label>
         <nav>
             <ul id="menu">
@@ -68,7 +71,7 @@
         </section>
     </main>
 
-     <!-- Footer -->
+    <!-- Footer -->
     <footer>
         <ul id="social-networks">
             <li>
@@ -84,17 +87,18 @@
             <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our YouTube page (opens in a new tab)">
-                    <i class="fa-brands fa-youtube"></i></a>
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i></a>
             </li>
-        </ul>    
+        </ul>
     </footer>
 
     <!-- Font Awesome kit -->
-    <script src="https://kit.fontawesome.com/526ac4575f.js" crossorigin="anonymous"></script>    
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
